// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should highlight all text when focused and highlightOnFocus is true 1`] = `
<styled.input
  className="input "
  data-component-type="text_input"
  id="test-input"
  name="test-input"
  onFocus={[Function]}
  type="text"
/>
`;

exports[`<Input /> should not highlight all text when focused and highlightOnFocus is false\` 1`] = `
<styled.input
  className="input "
  data-component-type="text_input"
  id="test-input"
  name="test-input"
  onFocus={[Function]}
  type="text"
/>
`;

exports[`<Input /> should render an input 1`] = `
<styled.input
  className="input "
  data-component-type="text_input"
  id="test-input"
  name="test-input"
  onFocus={[Function]}
  type="text"
/>
`;

exports[`<Input /> should render an input with a clear button 1`] = `
<styled.div
  hasClearButton={true}
  hasIcon={false}
  hasTextIndent={false}
  prefixWrapperWidth={0}
>
  <styled.input
    className="input "
    data-component-type="text_input"
    id="test-input"
    name="test-input"
    onFocus={[Function]}
    type="text"
  />
  <styled.button
    onClick={[Function]}
  >
    ×
  </styled.button>
</styled.div>
`;

exports[`<Input /> should render an input with a disable prefix text 1`] = `
<styled.div
  disabledPrefix="test"
  hasClearButton={false}
  hasIcon={false}
  hasTextIndent={true}
  prefixWrapperWidth={0}
>
  <styled.div
    innerRef={
      Object {
        "current": null,
      }
    }
  >
    <styled.span>
       
      test
       
    </styled.span>
  </styled.div>
  <styled.input
    className="input "
    data-component-type="text_input"
    id="test-input"
    name="test-input"
    onFocus={[Function]}
    type="text"
  />
</styled.div>
`;

exports[`<Input /> should render an input with an icon 1`] = `
<styled.div
  hasClearButton={false}
  hasIcon={true}
  hasTextIndent={true}
  prefixWrapperWidth={0}
>
  <styled.div
    innerRef={
      Object {
        "current": null,
      }
    }
  >
    <Icon
      isSpinning={false}
      size="medium"
      type="fa-check"
    />
    <styled.span>
       
       
    </styled.span>
  </styled.div>
  <styled.input
    className="input "
    data-component-type="text_input"
    id="test-input"
    name="test-input"
    onFocus={[Function]}
    type="text"
  />
</styled.div>
`;

exports[`<Input /> should render with an onBlur function if handleBlur is passed in 1`] = `
<styled.input
  className="input "
  data-component-type="text_input"
  id="test-input"
  name="test-input"
  onBlur={[Function]}
  onFocus={[Function]}
  type="text"
/>
`;
